--- a/experience.html
+++ b/experience.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0043)https://preview.colorlib.com/theme/beckham/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en"><head>
+  <link rel="icon" type="image/png" href="img/self-logo.png"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 <title>Riddhiman Roy - Experiences</title>
